# utility-demo

./: .gitignore  GenericUtility_Platform_Synopsis.docx  README.md  build_leveled_dataset.py  clean_examples.py  export_dashboards.sh  export_one.sh  extract_dql.py  generate_clean_examples.py  generate_synopsis.py  leveled_examples.py  leveled_golden_dataset.json  parallel_export.sh  utility_comprehensive_dashboard.json  utility_comprehensive_dashboard_v2.json  utility_platform_dashboard.json
.github/: copilot-instructions.md
browser-traffic-generator/: Dockerfile  README.md  generator.js  k8s-generic.yaml  k8s-retail.yaml  k8s-utility.yaml  package.json
customer-billing-app/: README.md
dashboards-dre63214/: AG_Kubernetes_Technology_Health_Overview__24a10e30-9044-439a-a93f-0f8ac1d823db.json  AI_Model_Versioning_and_A_B_Testing__b1117f94-da9c-46ac-9764-cb5ebbdb9a7b.json  ATF_Test_Monitoring__8cb0b5ad-a7d2-49ea-9e2e-92e884d12344.json  AWS_API__dynatrace.clouds.aws-api-gateway.json  AWS_Bedrock__dynatrace.clouds.aws-bedrock.json  AWS_DynamoDB__dynatrace.clouds.aws-dynamodb.json  AWS_EC2__dynatrace.clouds.aws-ec2.json  AWS_ECS__dynatrace.clouds.aws-ecs.json  AWS_EFS__dynatrace.clouds.aws-efs.json  AWS_EKS__dynatrace.clouds.aws-eks.json  AWS_ELB__dynatrace.clouds.aws-elb.json  AWS_Edge_Networking__dynatrace.clouds.aws-edge.json  AWS_ElastiCache__dynatrace.clouds.aws-elasticache.json  AWS_S3__dynatrace.clouds.aws-s3.json  (+949 more)
outage-analytics-app/services/alert-correlation-service/: Cargo.toml  Dockerfile
outage-analytics-app/services/alert-correlation-service/src/: main.rs
(+133 files in other folders)
